wip: replace phone numbers with principals